<resources>
    <string name="app_name">RaccoonReports</string>
    <string name="appName01">Raccoon</string>
    <string name="appName02">Reports</string>
    <string name="AboutTheProgram">Программа для создания различных отчетов из программы \"еНот\" </string>
    <string name="settings">Настройки подключения к базе данных программы \"еНот\"</string>

    <string name="settingsHost">Host/IP</string>
    <string name="settingsDataBaseName">DataBase Name</string>
    <string name="settingsPort">Port</string>
    <string name="settingsLogin">Login</string>
    <string name="settingsPass">Password</string>

    <string name="textActivity101">ОМСУ.\nПоиск нарушения сроков</string>
    <string name="typeTime">Выбор периода</string>
    <string name="textTimeBegin">С</string>
    <string name="textTimeEnd">По</string>
    <string name="date_edit_text_hint">здесь будет дата..</string>
    <string name="btn_date_text">Дата</string>


    <string name="forUI">Поиск пропущенных номеров</string>
</resources>