<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_title"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:background="@drawable/header_layout_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/appName01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/app_name"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/appName01"
            android:textColor="@color/white"
            android:textSize="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/appName02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/app_name"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/appName02"
            android:textColor="@color/appNameRed"
            android:textSize="40dp"
            app:layout_constraintStart_toEndOf="@+id/appName01"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivDataBaseConn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toEndOf="@+id/appName02"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_dbnotconn" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="306dp"
            android:layout_height="72dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:text="@string/AboutTheProgram"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appName01" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>