<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity101">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_title"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:background="@drawable/header_layout_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/appName01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/app_name"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/appName01"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/appName02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/app_name"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/appName02"
            android:textColor="@color/appNameRed"
            android:textSize="40sp"
            app:layout_constraintStart_toEndOf="@+id/appName01"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivDataBaseConn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toEndOf="@+id/appName02"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_dbnotconn" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="306dp"
            android:layout_height="72dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/textActivity101"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appName01" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:backgroundTint="#6089F6"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/typeTime"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="91dp"
                tools:layout_editor_absoluteY="264dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:text="@string/textTimeBegin"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:layout_editor_absoluteX="91dp"
                    tools:layout_editor_absoluteY="264dp" />

                <EditText
                    android:id="@+id/editTextDateActivity101Begin"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="5dp"
                    android:layout_toLeftOf="@+id/btn_date"
                    android:enabled="false"
                    android:hint="@string/date_edit_text_hint"
                    android:inputType="date"
                    android:minHeight="48dp" />

                <Button
                    android:id="@+id/btn_date_Activity101_Begin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="55dp"
                    android:text="@string/btn_date_text"
                    android:layout_above="@+id/picked_time"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:text="@string/textTimeEnd"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:layout_editor_absoluteX="91dp"
                    tools:layout_editor_absoluteY="264dp" />

                <EditText
                    android:id="@+id/editTextDateActivity101End"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_toLeftOf="@+id/btn_date"
                    android:enabled="false"
                    android:hint="@string/date_edit_text_hint"
                    android:inputType="date"
                    android:minHeight="48dp" />

                <Button
                    android:id="@+id/btn_date_Activity101_End"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="55dp"
                    android:text="@string/btn_date_text"
                    android:layout_above="@+id/picked_time"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>