<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgraund">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_title"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:layout_marginBottom="411dp"
        android:background="@drawable/header_layout_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/appName01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/app_name"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/appName01"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/appName02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/app_name"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/appName02"
            android:textColor="@color/appNameRed"
            android:textSize="40sp"
            app:layout_constraintStart_toEndOf="@+id/appName01"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivDataBaseConn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toEndOf="@+id/appName02"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_dbnotconn" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="306dp"
            android:layout_height="72dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appName01" />




    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:backgroundTint="#6089F6"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/settingsHost"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="91dp"
                tools:layout_editor_absoluteY="264dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="20dp">

                <EditText
                    android:id="@+id/editTextHost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/settingsHost"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="@color/headerBackgraund"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="88dp"
                    tools:layout_editor_absoluteY="275dp" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/settingsDataBaseName"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="91dp"
                tools:layout_editor_absoluteY="264dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="20dp">

                <EditText
                    android:id="@+id/editTextDataBaseName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/settingsDataBaseName"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="@color/headerBackgraund"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="88dp"
                    tools:layout_editor_absoluteY="275dp" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/settingsPort"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="91dp"
                tools:layout_editor_absoluteY="264dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="20dp">

                <EditText
                    android:id="@+id/editTextPort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/settingsPort"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:textColor="@color/headerBackgraund"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="88dp"
                    tools:layout_editor_absoluteY="275dp" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/settingsLogin"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="91dp"
                tools:layout_editor_absoluteY="264dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="20dp">

                <EditText
                    android:id="@+id/editTextLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/settingsLogin"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="@color/headerBackgraund"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="88dp"
                    tools:layout_editor_absoluteY="275dp" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/settingsPass"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="91dp"
                tools:layout_editor_absoluteY="264dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="20dp">

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/settingsPass"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textColor="@color/headerBackgraund"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="88dp"
                    tools:layout_editor_absoluteY="275dp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <ImageButton
            android:id="@+id/imageBtnSaveSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="saveSettings"
            android:paddingRight="20dp"
            app:srcCompat="@drawable/ic_save_settings_button"
            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="664dp" />

        <ImageButton
            android:id="@+id/imageBtnTestConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="testConnection"
            android:paddingLeft="20dp"
            app:srcCompat="@drawable/ic_test_connect_button"
            tools:layout_editor_absoluteX="229dp"
            tools:layout_editor_absoluteY="629dp" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>